Added Playmats and hand display - Sample playmat backgrounds are generated in documents folder on creation along with conversion script and a credits document with the location of the full-sized, non-compressed image - Added hand display window which is a singleton. It minimizes on close unless the static method "CloseInstance" is called to ensure users  don't lose access to their hand - Added sections to Play window. If it is not a commander deck, the commander slot (the one above the deck) will open up to allow for placing a card. - No play controls are currently implemented - Added methods for copying a card and for copying objects with no construction parameters

--- a/App.xaml
+++ b/App.xaml
@@ -30,8 +30,10 @@
 
             <SolidColorBrush x:Key="BG1" Color="{DynamicResource BG1_Color}" />
             <SolidColorBrush x:Key="BG2" Color="{DynamicResource BG2_Color}" />
+            <SolidColorBrush x:Key="BG3" Color="{DynamicResource BG3_Color}" />
             <SolidColorBrush x:Key="FG1" Color="{DynamicResource FG1_Color}" />
             <SolidColorBrush x:Key="FG2" Color="{DynamicResource FG2_Color}" />
+            <SolidColorBrush x:Key="FG3" Color="{DynamicResource FG3_Color}" />
 
             <SolidColorBrush x:Key="White" Color="{DynamicResource White_Color}" />
             <SolidColorBrush x:Key="Blue" Color="{DynamicResource Blue_Color}" />
