--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -1,11 +1,13 @@
-﻿<Window x:Class="MTGProxyDesk.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MTGProxyDesk"
-        mc:Ignorable="d"
-        Title="MTG Proxy Desk" Height="450" Width="800"
+﻿<Window 
+    x:Class="MTGProxyDesk.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    WindowStartupLocation="CenterScreen"
+    xmlns:local="clr-namespace:MTGProxyDesk"
+    mc:Ignorable="d"
+    Title="MTG Proxy Desk" Height="450" Width="800"
 >
     <Grid>
         <Frame Name="MainFrame" Source="../Pages/StartPage.xaml" NavigationUIVisibility="Hidden"></Frame>
